Micronaut 3.0 fix (#91)
* revert to java 15 for spock, bump dependencies, switch leftover reactivex to reactor

* java 16 fixes, micronaut 3.0 fixes, default listener refactor

* fix adoc misstake, increase timer for test

* more time for TLS

* subscribe blocking for TLS to avoid test crashes due to prolonged run, move kotlin arguments for jvm to build.kt to avoid crashing parent project run on JVM16