@@ -1,9 +1,9 @@
 plugins {
-    id("org.jetbrains.kotlin.jvm") version "1.4.32"
-    id("org.jetbrains.kotlin.kapt") version "1.4.32"
+    id("org.jetbrains.kotlin.jvm") version "1.5.21"
+    id("org.jetbrains.kotlin.kapt") version "1.5.21"
     id("com.github.johnrengelman.shadow") version "7.0.0"
     id("io.micronaut.application") version "1.5.4"
-    id("org.jetbrains.kotlin.plugin.allopen") version "1.4.32"
+    id("org.jetbrains.kotlin.plugin.allopen") version "1.5.21"
 }
 
 version = "0.1"
@@ -29,13 +29,13 @@ dependencies {
     implementation("io.micronaut.kotlin:micronaut-kotlin-runtime")
     implementation("org.jetbrains.kotlin:kotlin-reflect:${kotlinVersion}")
     implementation("org.jetbrains.kotlin:kotlin-stdlib-jdk8:${kotlinVersion}")
-    runtimeOnly("ch.qos.logback:logback-classic")
+    implementation("ch.qos.logback:logback-classic")
     compileOnly("jakarta.inject:jakarta.inject-api:2.0.0")
     implementation("io.micronaut:micronaut-validation")
-    implementation("org.jetbrains.kotlinx:kotlinx-coroutines-core:1.4.3")
-    implementation("org.jetbrains.kotlinx:kotlinx-coroutines-core-jvm:1.4.3")
+    implementation("org.jetbrains.kotlinx:kotlinx-coroutines-core:1.5.1")
+    implementation("org.jetbrains.kotlinx:kotlinx-coroutines-core-jvm:1.5.1")
     implementation(project(":pulsar"))
-    implementation("io.projectreactor:reactor-core:3.4.8")
+    implementation("io.projectreactor:reactor-core")
 
     kaptTest("io.micronaut:micronaut-inject-java")
     testImplementation("org.testcontainers:junit-jupiter:1.16.0")
@@ -48,6 +48,10 @@ dependencies {
 
 application {
     mainClass.set("kotlinexample.ApplicationKt")
+    // due to this being subproject and parent is ignoring child gradle.properties this is a workaround
+    if (JavaVersion.VERSION_16 >= JavaVersion.current()) {
+        applicationDefaultJvmArgs = applicationDefaultJvmArgs.plus("org.gradle.jvmargs=--illegal-access=permit")
+    }
 }
 java {
     sourceCompatibility = JavaVersion.toVersion("1.8")
